Add WeChat service account login
